# tweet-sentiment

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: EDA.ipynb
tweet_sentiment/load_data/: data.py
tweet_sentiment/model/: data.py
