[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tweet_sentiment"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "thetai" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ruff>=0.11.0",
    "torch>=2.6.0",
]


[tool.ruff]
line-length = 99
src = ["tweet_sentiment"]
include = ["pyproject.toml", "tweet_sentiment/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tweet_sentiment"]
force-sort-within-sections = true

